// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`one snapshot per block at 40 / 80 / 120 columns (§10 S3) > draws every block at 40 columns (body 30) 1`] = `
{
  "budget": [
    "run",
    "  $0.001 of $2.00",
    "session",
    "  $0.00 of $10.00 · 1 run",
    "╶──── pending · next /resume …",
    "max-steps",
    "  14",
    "spend-cap",
    "  5.00",
  ],
  "calibration": [
    "  labels: review verdict vs",
    "          reviewer answer 0",
    "          done_<j> vs a later",
    "          parsed test result 0",
    "          task_complete vs",
    "          bench pass 0",
    "          succeeded vs",
    "  exec.ok/tests.allPassed 0",
    "  bin           n  mean p",
    "  0.0–0.1       0       —",
    "  0.1–0.2       0       —",
    "  0.2–0.3       0       —",
    "  0.3–0.4       0       —",
    "  0.4–0.5       0       —",
    "  0.5–0.6       0       —",
    "  0.6–0.7       0       —",
    "  0.7–0.8       0       —",
    "  0.8–0.9       0       —",
    "  0.9–1.0       0       —",
    "  ECE — (no labels)",
    "  near-threshold (|p−t| ≤",
    "  0.03): 0 (0 %)",
    "  risk@.30 0  risk@.70 0",
    "  complete@.85 0  plan@.70 0",
    "  context@.50 0",
    "  sharpness: — outside 0.2–0.8",
  ],
  "config": [
    "setting",
    "  value",
    "mode",
    "  jev-on  (flag)",
    "generator.model",
    "  z-ai/glm-5.3-flash  (file)",
    "limits.spendCapUsd",
    "  $2.000  (env)",
    "limits.maxSteps",
    "  lots",
    "  (file)",
    "  ✗ expected an integer ≥ 1",
    "session.spendCapUsd",
    "  $10.000 (default: 5 ×",
    "  limits.spendCapUsd)",
    "  (derived)",
    "workspace",
    "  ~/T/a3-ws-eO2WYu  (flag)",
    "runsDir",
    "  ~/T/a3-home-L5tIsG/runs",
    "  (env)",
    "… +3 default (/config --all)",
    "",
    "╶──── sandbox",
    "· seatbelt",
    "· writes only in the workspace",
    "  and run dirs",
    "· secrets, ~/.ssh, ~/.aws",
    "  unreadable",
    "· network on (--no-network)",
  ],
  "config --all": [
    "setting",
    "  value",
    "mode",
    "  jev-on  (flag)",
    "generator.model",
    "  z-ai/glm-5.3-flash",
    "  (file:/Users/me/proj/jevcode",
    "  .json)",
    "decider.model",
    "  typesafe/jev-1.13-20260917",
    "limits.spendCapUsd",
    "  $2.000  (env)",
    "limits.maxSteps",
    "  lots",
    "  (file:/x.json)",
    "  ✗ expected an integer ≥ 1",
    "session.spendCapUsd",
    "  $10.000 (default: 5 ×",
    "  limits.spendCapUsd)",
    "  (derived)",
    "workspace",
    "  ~/T/a3-ws-eO2WYu  (flag)",
    "runsDir",
    "  ~/T/a3-home-L5tIsG/runs",
    "  (env)",
    "ui.theme",
    "  dark",
    "ui.fps",
    "  30",
    "",
    "╶──── sandbox",
    "· seatbelt",
    "· writes only in the workspace",
    "  and run dirs",
    "· secrets, ~/.ssh, ~/.aws",
    "  unreadable",
    "· network on (--no-network)",
  ],
  "cost": [
    "run",
    "  $0.001 of $2.00 · 0 %",
    "session",
    "  $0.001 of $10.00 · 0 % · 1",
    "  run",
    "per step",
    "  p50 $0.000 · last $0.000 ·",
    "  about 6 663 steps left",
    "generator",
    "  $0.000 · provider usage.cost",
    "jev",
    "  $0.001 · 83 questions ·",
    "  $0.000012 each · p50 0 ms",
    "chat",
    "  $0.0001 · 1 message · p50 0",
    "  ms",
    "raise it",
    "  /budget spend-cap <usd> ·",
    "  /budget session-spend-cap",
    "  <usd|none>",
  ],
  "epilogue": [
    "run",
    "  20260922-035503-kntk2yw3",
    "files",
    "  …/20260922-035503-kntk2yw3/",
    "  (transcript.log, state.json,",
    "  jevcode.log)",
    "resume",
    "  jevcode run --resume",
    "  20260922-035503-kntk2yw3",
    "report",
    "  jevcode report",
    "  20260922-035503-kntk2yw3",
    "  (redacted bundle written",
    "  locally; nothing is sent)",
  ],
  "errors": [
    "nothing to report — no",
    "warnings or errors this",
    "session",
  ],
  "jev": [
    "decider",
    "  typesafe · api.typesafe.test",
    "  · typesafe/jev-1.13-20260917",
    "  (pinned)",
    "latency",
    "  p50 0 ms · p95 2 ms",
    "cost",
    "  $0.001 · 83 questions",
    "intake",
    "  1 message · p50 0 ms ·",
    "  $0.0001 · last question",
    "  about this tool (1.00)",
  ],
  "peers": [
    "workspace",
    "  ~/T/a3-ws-jC6j7y",
    "started",
    "  14s ago",
    "state",
    "  exclusive lease held",
  ],
  "status": [
    "run",
    "  20260922-035503-kntk2yw3 ·",
    "  complete (exit 0)",
    "session",
    "  20260922-035503-kntk2yw3 · 1",
    "  run · $0.001",
    "step",
    "  4 of 40 · idle",
    "workspace",
    "  ~/T/a3-ws-jC6j7y · no git",
    "  repository",
    "sandbox",
    "  seatbelt · lock released",
  ],
}
`;

exports[`one snapshot per block at 40 / 80 / 120 columns (§10 S3) > draws every block at 80 columns (body 70) 1`] = `
{
  "budget": [
    "run        $0.001 of $2.00",
    "session    $0.00 of $10.00 · 1 run",
    "╶──── pending · next /resume or run",
    "max-steps  14",
    "spend-cap  5.00",
  ],
  "calibration": [
    "  labels: review verdict vs reviewer answer 0",
    "          done_<j> vs a later parsed test result 0",
    "          task_complete vs bench pass 0",
    "          succeeded vs exec.ok/tests.allPassed 0",
    "  bin           n  mean p  observed  bar",
    "  0.0–0.1       0       —         —",
    "  0.1–0.2       0       —         —",
    "  0.2–0.3       0       —         —",
    "  0.3–0.4       0       —         —",
    "  0.4–0.5       0       —         —",
    "  0.5–0.6       0       —         —",
    "  0.6–0.7       0       —         —",
    "  0.7–0.8       0       —         —",
    "  0.8–0.9       0       —         —",
    "  0.9–1.0       0       —         —",
    "  ECE — (no labels)   near-threshold (|p−t| ≤ 0.03): 0 (0 %)",
    "  risk@.30 0  risk@.70 0  complete@.85 0  plan@.70 0  context@.50 0",
    "  sharpness: — outside 0.2–0.8",
  ],
  "config": [
    "setting              value",
    "mode                 jev-on  (flag)",
    "generator.model      z-ai/glm-5.3-flash  (file)",
    "limits.spendCapUsd   $2.000  (env)",
    "limits.maxSteps      lots  (file)  ✗ expected an integer ≥ 1",
    "session.spendCapUsd  $10.000 (default: 5 × limits.spendCapUsd)",
    "  (derived)",
    "workspace            ~/T/a3-ws-eO2WYu  (flag)",
    "runsDir              ~/T/a3-home-L5tIsG/runs  (env)",
    "… +3 settings at their defaults (/config --all)",
    "",
    "╶──── sandbox",
    "seatbelt · writes only in the workspace and run dirs",
    "secrets, ~/.ssh, ~/.aws unreadable · network on (--no-network)",
  ],
  "config --all": [
    "setting              value",
    "mode                 jev-on  (flag)",
    "generator.model      z-ai/glm-5.3-flash",
    "  (file:/Users/me/proj/jevcode.json)",
    "decider.model        typesafe/jev-1.13-20260917",
    "limits.spendCapUsd   $2.000  (env)",
    "limits.maxSteps      lots  (file:/x.json)  ✗ expected an integer ≥ 1",
    "session.spendCapUsd  $10.000 (default: 5 × limits.spendCapUsd)",
    "  (derived)",
    "workspace            ~/T/a3-ws-eO2WYu  (flag)",
    "runsDir              ~/T/a3-home-L5tIsG/runs  (env)",
    "ui.theme             dark",
    "ui.fps               30",
    "",
    "╶──── sandbox",
    "seatbelt · writes only in the workspace and run dirs",
    "secrets, ~/.ssh, ~/.aws unreadable · network on (--no-network)",
  ],
  "cost": [
    "run        $0.001 of $2.00 · 0 %",
    "session    $0.001 of $10.00 · 0 % · 1 run",
    "per step   p50 $0.000 · last $0.000 · about 6 663 steps left",
    "generator  $0.000 · provider usage.cost",
    "jev        $0.001 · 83 questions · $0.000012 each · p50 0 ms",
    "chat       $0.0001 · 1 message · p50 0 ms",
    "raise it   /budget spend-cap <usd> · /budget session-spend-cap",
    "           <usd|none>",
  ],
  "epilogue": [
    "run        20260922-035503-kntk2yw3",
    "files      ~/T/a3-home/runs/20260922-035503-kntk2yw3/",
    "           (transcript.log, state.json, jevcode.log)",
    "resume     jevcode run --resume 20260922-035503-kntk2yw3",
    "report     jevcode report 20260922-035503-kntk2yw3   (redacted bundle",
    "           written locally; nothing is sent)",
  ],
  "errors": [
    "nothing to report — no warnings or errors this session",
  ],
  "jev": [
    "decider    typesafe · api.typesafe.test · typesafe/jev-1.13-20260917",
    "           (pinned)",
    "latency    p50 0 ms · p95 2 ms",
    "cost       $0.001 · 83 questions",
    "intake     1 message · p50 0 ms · $0.0001 · last question about this",
    "           tool (1.00)",
  ],
  "peers": [
    "workspace  ~/T/a3-ws-jC6j7y",
    "started    14s ago",
    "state      exclusive lease held",
  ],
  "status": [
    "run        20260922-035503-kntk2yw3 · complete (exit 0)",
    "session    20260922-035503-kntk2yw3 · 1 run · $0.001",
    "step       4 of 40 · idle",
    "workspace  ~/T/a3-ws-jC6j7y · no git repository",
    "sandbox    seatbelt · lock released",
  ],
}
`;

exports[`one snapshot per block at 40 / 80 / 120 columns (§10 S3) > draws every block at 120 columns (body 110) 1`] = `
{
  "budget": [
    "run        $0.001 of $2.00",
    "session    $0.00 of $10.00 · 1 run",
    "╶──── pending · next /resume or run",
    "max-steps  14",
    "spend-cap  5.00",
  ],
  "calibration": [
    "  labels: review verdict vs reviewer answer 0 · done_<j> vs a later parsed test result 0",
    "          task_complete vs bench pass 0 · succeeded vs exec.ok/tests.allPassed 0",
    "  bin           n  mean p  observed  bar",
    "  0.0–0.1       0       —         —",
    "  0.1–0.2       0       —         —",
    "  0.2–0.3       0       —         —",
    "  0.3–0.4       0       —         —",
    "  0.4–0.5       0       —         —",
    "  0.5–0.6       0       —         —",
    "  0.6–0.7       0       —         —",
    "  0.7–0.8       0       —         —",
    "  0.8–0.9       0       —         —",
    "  0.9–1.0       0       —         —",
    "  ECE — (no labels)   near-threshold (|p−t| ≤ 0.03): 0 (0 %)",
    "  risk@.30 0  risk@.70 0  complete@.85 0  plan@.70 0  context@.50 0",
    "  sharpness: — outside 0.2–0.8",
  ],
  "config": [
    "setting              value",
    "mode                 jev-on  (flag)",
    "generator.model      z-ai/glm-5.3-flash  (file)",
    "limits.spendCapUsd   $2.000  (env)",
    "limits.maxSteps      lots  (file)  ✗ expected an integer ≥ 1",
    "session.spendCapUsd  $10.000 (default: 5 × limits.spendCapUsd)  (derived)",
    "workspace            ~/T/a3-ws-eO2WYu  (flag)",
    "runsDir              ~/T/a3-home-L5tIsG/runs  (env)",
    "… +3 settings at their defaults (/config --all)",
    "",
    "╶──── sandbox",
    "seatbelt · writes only in the workspace and run dirs · secrets, ~/.ssh, ~/.aws unreadable",
    "network on (--no-network)",
  ],
  "config --all": [
    "setting              value",
    "mode                 jev-on  (flag)",
    "generator.model      z-ai/glm-5.3-flash  (file:/Users/me/proj/jevcode.json)",
    "decider.model        typesafe/jev-1.13-20260917",
    "limits.spendCapUsd   $2.000  (env)",
    "limits.maxSteps      lots  (file:/x.json)  ✗ expected an integer ≥ 1",
    "session.spendCapUsd  $10.000 (default: 5 × limits.spendCapUsd)  (derived)",
    "workspace            ~/T/a3-ws-eO2WYu  (flag)",
    "runsDir              ~/T/a3-home-L5tIsG/runs  (env)",
    "ui.theme             dark",
    "ui.fps               30",
    "",
    "╶──── sandbox",
    "seatbelt · writes only in the workspace and run dirs · secrets, ~/.ssh, ~/.aws unreadable",
    "network on (--no-network)",
  ],
  "cost": [
    "run        $0.001 of $2.00 · 0 %",
    "session    $0.001 of $10.00 · 0 % · 1 run",
    "per step   p50 $0.000 · last $0.000 · about 6 663 steps left",
    "generator  $0.000 · provider usage.cost",
    "jev        $0.001 · 83 questions · $0.000012 each · p50 0 ms",
    "chat       $0.0001 · 1 message · p50 0 ms",
    "raise it   /budget spend-cap <usd> · /budget session-spend-cap <usd|none>",
  ],
  "epilogue": [
    "run        20260922-035503-kntk2yw3",
    "files      ~/T/a3-home/runs/20260922-035503-kntk2yw3/  (transcript.log, state.json, jevcode.log)",
    "resume     jevcode run --resume 20260922-035503-kntk2yw3",
    "report     jevcode report 20260922-035503-kntk2yw3   (redacted bundle written locally; nothing is sent)",
  ],
  "errors": [
    "nothing to report — no warnings or errors this session",
  ],
  "jev": [
    "decider    typesafe · api.typesafe.test · typesafe/jev-1.13-20260917 (pinned)",
    "latency    p50 0 ms · p95 2 ms",
    "cost       $0.001 · 83 questions",
    "intake     1 message · p50 0 ms · $0.0001 · last question about this tool (1.00)",
  ],
  "peers": [
    "workspace  ~/T/a3-ws-jC6j7y",
    "started    14s ago",
    "state      exclusive lease held",
  ],
  "status": [
    "run        20260922-035503-kntk2yw3 · complete (exit 0)",
    "session    20260922-035503-kntk2yw3 · 1 run · $0.001",
    "step       4 of 40 · idle",
    "workspace  ~/T/a3-ws-jC6j7y · no git repository",
    "sandbox    seatbelt · lock released",
  ],
}
`;
